# normalize

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
config/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  README.sgml  frontend.txt  normalize-mp3.1  normalize.1  normalize.1.sgml
doc/fr/: Makefile.am  Makefile.in  README  normalize.1  normalize.1.sgml
nid3lib/: Makefile.am  Makefile.in  comment.c  frame_desc.c  genre.c  image.c  nid3.c  nid3.h  nid3P.h  rva.c  simple.c  text.c  versions.c  write.c
packaging/: copyright  normalize.list  normalize.spec  pkginfo  prototype  request
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en_GB.gmo  en_GB.po  fr.gmo  fr.po  normalize.pot
src/: Makefile.am  Makefile.in  adjust.c  common.h  getopt.c  getopt1.c  mktestwav.c  mpegadjust.c  mpegvolume.c  normalize-mp3.in  normalize.c  riff.c  riff.h  version.c  volume.c  wiener_af.c  wiener_af.h
test/: Makefile.am  Makefile.in  test-tools  test16bit.sh  test24bit.sh  test8bit.sh
xmms-rva/: Makefile.am  Makefile.in  rvaplugin.c
