## Process this file with automake to produce Makefile.in

#man_MANS = normalize.1
#mandir = @mandir@/fr
#EXTRA_DIST = $(man_MANS) normalize.sgml README
EXTRA_DIST = normalize.1 normalize.1.sgml README

#default:

#normalize.1: normalize.sgml
#	onsgmls $< \
#	| sgmlspl $(SGML_SHARE)/docbook2X/docbook2man-spec.pl

#README.html: README.sgml
#	openjade -t sgml -d "$(SGML_SHARE)/dsssl/docbook/html/ldp.dsl#html" $<
#	sed 's/index.html/README.html/g' index.html > README.html

#README.rtf: README.sgml
#	openjade -t rtf -d "$(SGML_SHARE)/dsssl/docbook/print/ldp.dsl#print" $<
